plugins {
    id 'java-library'
    id 'maven-publish'
    id 'com.gradleup.shadow' version '8.3.5'
}

group = 'v.akfz'
version = project.version

repositories {
    mavenCentral()
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
    withSourcesJar()
    withJavadocJar()
}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs.addAll([
            '--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
            '--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED',
            '-parameters',
            '-g'
    ])
}

tasks.withType(Javadoc).configureEach {
    options.addBooleanOption('-add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED', true)
    options.addBooleanOption('-add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED', true)
}

dependencies {
    implementation 'com.squareup:javapoet:1.13.0'
}

shadowJar {
    archiveClassifier.set('')
    relocate 'com.squareup.javapoet', 'v.akfz.db.generator.shadow.javapoet'
}

tasks.build {
    dependsOn tasks.shadowJar
}

publishing {
    publications {
        mavenJava(MavenPublication) {
            from components.shadow
        }
    }
}